infrastructure/identity-provider/manifests/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: keycloak-ingress
  namespace: keycloak-ha
spec:
  rules:
  - host: auth.crownlabs.polito.it
    http:
      paths:
      - backend:
          serviceName: keycloak-server-http
          servicePort: 8443
        path: /
  tls:
  - hosts:
    - auth.crownlabs.polito.it
